# syncguard

./: .gitignore  README.md  pyproject.toml
syncguard/: __init__.py  cli.py
syncguard/core/: __init__.py  db.py  models.py
syncguard/detector/: __init__.py  detector.py  git_diff.py
syncguard/extractor/: __init__.py  extractor.py  patterns.py  python_ast.py
syncguard/fixer/: __init__.py  fixer.py
syncguard/ledger/: __init__.py  ledger.py
syncguard/propagator/: __init__.py  propagator.py
syncguard/server/: app.py  routes.py
syncguard/v2/: __init__.py  api_contracts.py  autofix.py  breaking.py  config.py  cross_service.py  database.py  debt.py  reports.py  schema.py  semver.py  test_inference.py  visualization.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_detector.py  test_extractor.py  test_fixer.py  test_integration.py  test_ledger.py  test_propagator.py  test_python_ast.py  test_v2.py
